--- a/course_material/week_01/hw1_problem_set.ipynb
+++ b/course_material/week_01/hw1_problem_set.ipynb
@@ -25,7 +25,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "help()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,10 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value = \"hello\"\n",
+    "type(value)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,7 +69,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "foo = \"bar\"\n",
+    "foo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,7 +86,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#C++ has a stack, python has lists that cna be used similarly"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +99,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'sandwich', 4, 'apple']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1,\"sandwich\",4,\"apple\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +129,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "{\"Mounika\":\"53443531\",\"Sarah\":\"123982131\"}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +156,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#above also alters original list\n",
+    "list1 = [1,2,3]\n",
+    "list2 = list(list1) \n",
+    "list2 = list1.copy()\n",
+    "list2[0]= 9"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,10 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=0\n",
+    "b=10\n",
+    "#truthy refers to values that evalutate to True\n",
+    "#falsey refers to values that evaluate to False\n",
+    "if a:\n",
+    "    print(a)\n",
+    "\n",
+    "if b:\n",
+    "    False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,7 +206,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#python is dynamically typed\n",
+    "#good = faster development and changes are faster\n",
+    "#bad = language itself is slower, bugs/errors arent caught until the program runs\n",
+    "#dynamically typed variable types can change"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,10 +222,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(abs(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = \"hello world\"\n",
+    "length_var = len(x)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +259,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# % sign = modulus"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +275,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#operators carry out logical or arithmetic computations"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,7 +291,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#datetime data type doesnt exist in python. We need to import a module to handle\n",
+    "# datetimes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,10 +305,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#combination of values and operators that evaluates to a single value\n",
+    "5 + 7"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,12 +333,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "foo = 23\n",
-    "bar = 48"
+    "bar = 48\n",
+    "\n",
+    "bar > foo "
    ]
   },
   {
@@ -258,6 +369,13 @@
    "source": [
     "my_list = [1,2,3,4,5,6,7,8,9]\n",
     "for i in my_list:\n",
+    "    if i % 2 == 0:\n",
+    "        print(\"Even\")\n",
+    "    if i % 2 != 2 & i != 3:\n",
+    "        print(\"Odd\")\n",
+    "    if i == 3:\n",
+    "        print(\"Three\")\n",
+    "    \n",
     "    pass\n",
     "    #Your if statement goes here.\n",
     "    #Be sure to indent the statement\n",
@@ -277,7 +395,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "=="
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,7 +411,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "65 <= 70 "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -620,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
