week 4 assignment and readme

--- a/course_material/week_02/week_02_homework.ipynb
+++ b/course_material/week_02/week_02_homework.ipynb
@@ -19,14 +19,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "490\n",
+      "21\n",
+      "308\n",
+      "147\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "integers_list = [random.randint(0,1000) for i in range(50)] # a list comprehension\n",
     "\n",
-    "# your code here"
+    "# your code here\n",
+    "for integer in integers_list:\n",
+    "    if integer % 7 ==0 and integer != 0:\n",
+    "        print(integer)"
    ]
   },
   {
@@ -88,12 +102,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 cat\n",
+      "0 cat\n",
+      "1 dog\n",
+      "1 dog\n",
+      "2 ['mouse', 'mosquito', 'bat', 'mosquito']\n",
+      "2 ['mouse', 'mosquito', 'bat', 'mosquito']\n",
+      "3 ['elephant', 'dog', 'whale', 'lion', 32, 'mosquito']\n",
+      "3 ['elephant', 'dog', 'whale', 'lion', 32, 'mosquito']\n",
+      "4 bird\n",
+      "4 bird\n",
+      "5 []\n",
+      "5 []\n",
+      "6 mosquito\n",
+      "6 mosquito\n"
+     ]
+    }
+   ],
    "source": [
     "double_trouble = ['cat', 'dog', ['mouse','mosquito','bat','mosquito'],['elephant','dog','whale','lion',32,'mosquito'],'bird',[],'mosquito']\n",
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "for index, animal  in enumerate(double_trouble):\n",
+    "    print(str(index) + \" \" + str(animal))\n",
+    "    if animal == 'mosquito':\n",
+    "        double_trouble.pop(index)\n",
+    "    print(str(index) + \" \" + str(animal))\n",
+    "    "
    ]
   },
   {
@@ -134,7 +176,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def character(string):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +190,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def character(string):\n",
+    "    #go through string\n",
+    "    allowed='abcdefghijklmnopqrstuvwxyz0123456789'\n",
+    "    \n",
+    "    new_list = []\n",
+    "    \n",
+    "    for val in string:\n",
+    "        if val in allowed:\n",
+    "            new_list.append(val)\n",
+    "    \n",
+    "    new_some_string = ''.join(new_list)\n",
+    "    \n",
+    "    return new_some_string\n",
+    "            \n",
+    "    #if alphaneumeric, replace with blank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'thisstringhassomeweirdvalues02'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "character(\"this string has %^&! some weird values02\")"
+   ]
   },
   {
    "cell_type": "markdown",
