update week 6 hw

--- a/course_material/week_04/week_05_starting_exercise.ipynb
+++ b/course_material/week_04/week_05_starting_exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,6 +321,186 @@
    ],
    "source": [
     "belize_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "belize_neighborhood_df = belize_df.groupby('neighbourhood')['number_of_reviews','price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Belize Islands</th>\n",
+       "      <td>17.647736</td>\n",
+       "      <td>399.442824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Belize Mainland</th>\n",
+       "      <td>15.147601</td>\n",
+       "      <td>288.273063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cayo</th>\n",
+       "      <td>14.566337</td>\n",
+       "      <td>205.847525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Corozal</th>\n",
+       "      <td>7.569231</td>\n",
+       "      <td>156.553846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Orange Walk</th>\n",
+       "      <td>14.821429</td>\n",
+       "      <td>122.035714</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 number_of_reviews       price\n",
+       "neighbourhood                                 \n",
+       "Belize Islands           17.647736  399.442824\n",
+       "Belize Mainland          15.147601  288.273063\n",
+       "Cayo                     14.566337  205.847525\n",
+       "Corozal                   7.569231  156.553846\n",
+       "Orange Walk              14.821429  122.035714"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_sum = belize_df.groupby('neighbourhood')['number_of_reviews'].sum()\n",
+    "belize_neighborhood_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_belize_df = pd.DataFrame({\"sum of reviews\":review_sum})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum of reviews</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Belize Islands</th>\n",
+       "      <td>22995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Belize Mainland</th>\n",
+       "      <td>4105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cayo</th>\n",
+       "      <td>7356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Corozal</th>\n",
+       "      <td>492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Orange Walk</th>\n",
+       "      <td>415</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 sum of reviews\n",
+       "neighbourhood                  \n",
+       "Belize Islands            22995\n",
+       "Belize Mainland            4105\n",
+       "Cayo                       7356\n",
+       "Corozal                     492\n",
+       "Orange Walk                 415"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_belize_df.head()"
    ]
   },
   {
