--- a/course_material/week_14/multiple_linear_reg_logistic.ipynb
+++ b/course_material/week_14/multiple_linear_reg_logistic.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "4  773  327  67  72   9  29  24"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,30 @@
    "source": [
     "from statsmodels.formula.api import ols\n",
     "diabetes_df = pd.read_csv(\"../week_13/diabetes.csv\")\n",
+    "\n",
     "diabetes_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    500\n",
+       "1    268\n",
+       "Name: Outcome, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diabetes_df['Outcome'].value_counts()"
    ]
   },
   {
