--- a/course_material/week_14/multiple_linear_reg_logistic.ipynb
+++ b/course_material/week_14/multiple_linear_reg_logistic.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,39 +545,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Simplest logistic regression approach\n",
     "clf = LogisticRegression(random_state=0).fit(X_train, y_train)\n",
-    "sample_pred=[[6,148,72,35,0,33.6,0.627,50]]\n",
+    "#sample_pred=[[6,148,72,35,0,33.6,0.627,50]]\n",
     "y_predicted = clf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3489583333333333"
+       "0.7077922077922078"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf.score(X,y)"
+    "clf.score(X_test,y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7915309446254072"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
