unsupervised learning notebook

--- a/course_material/week_19/unsupervised_learning.ipynb
+++ b/course_material/week_19/unsupervised_learning.ipynb
@@ -526,15 +526,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7970204841713222\n",
-      "0.5887445887445888\n"
+      "test accuracy: 0.7056277056277056\n",
+      "train accuracy: 0.7877094972067039\n"
      ]
     }
    ],
@@ -543,14 +543,17 @@
     "\n",
     "svd = TruncatedSVD(n_components=7)\n",
     "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state=42, stratify=y)\n",
+    "\n",
     "X_train_svd=svd.fit_transform(X_train)\n",
     "X_test_svd=svd.fit_transform(X_test)\n",
     "\n",
     "clr = LogisticRegression(random_state=42).fit(X_train_svd, y_train)\n",
-    "print(clr.score(X_train_svd,y_train))\n",
+    "# Print the accuracy\n",
+    "print(\"test accuracy: \" + str(clr.score(X_test_svd, y_test)))\n",
     "\n",
-    "clr = LogisticRegression(random_state=42).fit(X_test_svd, y_test)\n",
-    "print(clr.score(X_test_svd,y_test))"
+    "# Print the accuracy\n",
+    "print(\"train accuracy: \" + str(clr.score(X_train_svd, y_train)))"
    ]
   },
   {
