fall 2021 first few weeks

--- a/course_material/week_02/week_02_homework.ipynb
+++ b/course_material/week_02/week_02_homework.ipynb
@@ -37,10 +37,7 @@
     "import random\n",
     "integers_list = [random.randint(0,1000) for i in range(50)] # a list comprehension\n",
     "\n",
-    "# your code here\n",
-    "for integer in integers_list:\n",
-    "    if integer % 7 ==0 and integer != 0:\n",
-    "        print(integer)"
+    "# your code here"
    ]
   },
   {
@@ -129,12 +126,6 @@
    "source": [
     "double_trouble = ['cat', 'dog', ['mouse','mosquito','bat','mosquito'],['elephant','dog','whale','lion',32,'mosquito'],'bird',[],'mosquito']\n",
     "# your code here\n",
-    "\n",
-    "for index, animal  in enumerate(double_trouble):\n",
-    "    print(str(index) + \" \" + str(animal))\n",
-    "    if animal == 'mosquito':\n",
-    "        double_trouble.pop(index)\n",
-    "    print(str(index) + \" \" + str(animal))\n",
     "    "
    ]
   },
@@ -177,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def character(string):\n",
+    "\n",
     "    "
    ]
   },
@@ -193,23 +184,7 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def character(string):\n",
-    "    #go through string\n",
-    "    allowed='abcdefghijklmnopqrstuvwxyz0123456789'\n",
-    "    \n",
-    "    new_list = []\n",
-    "    \n",
-    "    for val in string:\n",
-    "        if val in allowed:\n",
-    "            new_list.append(val)\n",
-    "    \n",
-    "    new_some_string = ''.join(new_list)\n",
-    "    \n",
-    "    return new_some_string\n",
-    "            \n",
-    "    #if alphaneumeric, replace with blank"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
