--- a/course_material/week_03/week_03_homework.ipynb
+++ b/course_material/week_03/week_03_homework.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,9 @@
    "source": [
     "1. How can you get help on `np.array`?\n",
     "\n",
-    "Call `dir()` on `np.array`. \n",
+    "Call dir() on np.array.\n",
     "\n",
-    "Call `dir()` on `car`.\n",
+    "Call dir() on car.\n",
     "\n",
     "Note the difference. `car` has methods and attributes we can use."
    ]
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. What are the numpy datatypes for the `car`,`mpg`, `horsepower` and `origin` arrays? (Hint: Not `type(car)` and use `print()` to print the numpy type.)"
+    " 2.What are the numpy datatypes for the `car`,`mpg`, `horsepower` and `origin` arrays? (Hint: Not `type(car)` and use `print()` to print the numpy type.)"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. `numpy` is often imported as `np`. What is this action called? Why might you do this? "
+    "3.`numpy` is often imported as `np`. What is this action called? Why might you do this? "
    ]
   },
   {
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Each of the arrays (cars, mpg, cylinders, etc..) has how many dimensions? Show how to find this using code. "
+    "4.Each of the arrays (cars, mpg, cylinders, etc..) has how many dimensions? Show how to find this using code. "
    ]
   },
   {
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Show how to:\n",
+    "5.Show how to:\n",
     "\n",
     "- multiply the `mpg` array by 12.\n",
     "- divide the `mpg` array by 3.\n",
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. What is the ___ of `horsepower`?\n",
+    "6.What is the ___ of `horsepower`?\n",
     "- sum\n",
     "- min\n",
     "- max\n",
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Select a subset of `acceleration`. \n",
+    "7.Select a subset of `acceleration`. \n",
     "\n",
     "- Select only the first 5 elements.\n",
     "- Select every other element (new selection)."
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Show how to select the number `99` in the array below. "
+    "8.Show how to select the number `99` in the array below. "
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Select the last element in each subarray (do this with one operation.)"
+    "9.Select the last element in each subarray (do this with one operation.)"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. Use the built-in `np.lookfor()` function to search for `'log'`.\n",
+    "10.Use the built-in `np.lookfor()` function to search for `'log'`.\n",
     "\n",
     "Use the function you find and apply it to `mpg`."
    ]
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11. You your google skills to find the unique items in `origin`. (This may not have been covered in the readings.)"
+    "11.You your google skills to find the unique items in `origin`. (This may not have been covered in the readings.)"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12. \n",
+    "12.\n",
     "- Create a 2D array and print its shape as well as ndim. (Any shape is fine)\n",
     "\n",
     "- Create a 3D array and print its shape as well as ndim.\n",
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14. Apply your index (from above) to the `car` array. You should now only see cars that are of US origin. "
+    "14.Apply your index (from above) to the `car` array. You should now only see cars that are of US origin. "
    ]
   },
   {
@@ -490,6 +490,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "15.Why might you prefer an `np.array()` over a Python `list`? And when is a Python `list` preferred? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**The remaining questions are OPTIONAL**: The readings did not address all of these so you may have to use some \"Google-Fu\". "
    ]
   },
@@ -512,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Transpose the following array. "
+    "2.Transpose the following array. "
    ]
   },
   {
@@ -537,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Why does this multiplication operation fail? "
+    "3.Why does this multiplication operation fail? "
    ]
   },
   {
@@ -573,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. What is the average horsepower for `Europe` cars? (Hint: create boolean index of 'US' apply it to horsepower and perform the calculation.)"
+    "4.What is the average horsepower for `Europe` cars? (Hint: create boolean index of 'US' apply it to horsepower and perform the calculation.)"
    ]
   },
   {
@@ -587,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. On average are Japanse cars more fuel efficient than US cars? "
+    "5.On average are Japanse cars more fuel efficient than US cars? "
    ]
   },
   {
@@ -601,29 +615,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. What is the correlation coefficient of `mpg` and `weight`? What is a correlaton coefficient?"
+    "6.What is the correlation coefficient of `mpg` and `weight`? What is a correlaton coefficient?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "7. Why might you prefer an `np.array()` over a Python `list`? And when is a Python `list` preferred? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -649,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
